--- a/src/main/webapp/app/entities/story/story.component.html
+++ b/src/main/webapp/app/entities/story/story.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2>
         <span>Stories</span>
-        <button class="btn btn-primary float-right jh-create-entity create-story" [routerLink]="['/', { outlets: { popup: ['story-new'] } }]">
+        <button *jhiHasAnyAuthority="'ROLE_ADMIN'" class="btn btn-primary float-right jh-create-entity create-story" [routerLink]="['/', { outlets: { popup: ['story-new'] } }]">
             <span class="fa fa-plus"></span>
             <span >
             Create new Story
@@ -14,53 +14,29 @@
     <br/>
     <div class="table-responsive" *ngIf="stories">
         <table class="table table-striped">
-            <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
-            <th jhiSortBy="id"><span>ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="title"><span>Title</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="content"><span>Content</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="date"><span>Date</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="imageUrl"><span>Image Url</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="user.login"><span>User</span> <span class="fa fa-sort"></span></th>
-            <th></th>
-            </tr>
-            </thead>
             <tbody infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
             <tr *ngFor="let story of stories ;trackBy: trackId">
-                <td><a [routerLink]="['../story', story.id ]">{{story.id}}</a></td>
-                <td>{{story.title}}</td>
-                <td>{{story.content}}</td>
-                <td>{{story.date | date:'medium'}}</td>
-                <td>{{story.imageUrl}}</td>
-                <td>
-                    {{story.user?.login}}
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['../story', story.id ]"
-                                class="btn btn-info btn-sm">
-                            <span class="fa fa-eye"></span>
-                            <span class="d-none d-md-inline">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'story/'+ story.id + '/edit'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-primary btn-sm">
-                            <span class="fa fa-pencil"></span>
-                            <span class="d-none d-md-inline">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'story/'+ story.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <span class="fa fa-remove"></span>
-                            <span class="d-none d-md-inline">Delete</span>
-                        </button>
-                    </div>
-                </td>
+                <h2 [routerLink]="['../story', story.id ]">{{story.title}}</h2>
+                <small>Posted on {{story.date | date:'short'}} by {{story.user?.login}}</small>
+                <div [innerHTML]="story.content"></div>
+                <div *jhiHasAnyAuthority="'ROLE_ADMIN'" class="btn-group mb-2 mt-1">
+                    <button type="submit"
+                            [routerLink]="['/', { outlets: { popup: 'story/'+ story.id + '/edit'} }]"
+                            replaceUrl="true"
+                            queryParamsHandling="merge"
+                            class="btn btn-primary btn-sm">
+                        <span class="fa fa-pencil"></span>
+                        <span class="d-none d-md-inline">Edit</span>
+                    </button>
+                    <button type="submit"
+                            [routerLink]="['/', { outlets: { popup: 'story/'+ story.id + '/delete'} }]"
+                            replaceUrl="true"
+                            queryParamsHandling="merge"
+                            class="btn btn-danger btn-sm">
+                        <span class="fa fa-remove"></span>
+                        <span class="d-none d-md-inline">Delete</span>
+                    </button>
+                </div>
             </tr>
             </tbody>
         </table>
