Add API get all comments by story id

--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -7,8 +7,14 @@ Navbar
 }
 
 .jh-navbar {
-    background-color: #353d47;
+    background-color: transparent;
     padding: .2em 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .jh-navbar .profile-image {
