--- a/src/main/webapp/app/entities/comment/comment.component.html
+++ b/src/main/webapp/app/entities/comment/comment.component.html
@@ -1,4 +1,16 @@
 <div>
+    <header class="intro-header" style="background-image: url('http://clean-blog-angular.hunor.me/img/home-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class = "post-heading">
+                        <h1>Comments</h1>
+                        <span class="meta">Posted on</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <h2>
         <span>Comments</span>
         <button class="btn btn-primary float-right jh-create-entity create-comment" [routerLink]="['/', { outlets: { popup: ['comment-new'] } }]">
