--- a/src/main/webapp/app/entities/story/story-detail.component.html
+++ b/src/main/webapp/app/entities/story/story-detail.component.html
@@ -1,43 +1,42 @@
-
 <div *ngIf="story">
-    <h2><span>Story</span> {{story.id}}</h2>
-    <hr>
+    <header class="intro-header" style="background-image: url('http://clean-blog-angular.hunor.me/img/home-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class = "post-heading">
+                        <h1>{{story.title}}</h1>
+                        <span class="meta">Posted on {{story.date | date:'short'}} by {{story.user?.login}}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <jhi-alert-error></jhi-alert-error>
-    <div *jhiHasAnyAuthority="'ROLE_ADMIN'">
-        <button type="submit"
-                (click)="previousState()"
-                class="btn btn-info">
-            <span class="fa fa-arrow-left"></span>&nbsp;<span> Back</span>
-        </button>
+    <div class="container">
+        <div *jhiHasAnyAuthority="'ROLE_ADMIN'">
+            <button type="submit"
+                    (click)="previousState()"
+                    class="btn btn-info">
+                <span class="fa fa-arrow-left"></span>&nbsp;<span> Back</span>
+            </button>
 
-        <button type="button"
-                [routerLink]="['/', { outlets: { popup: 'story/'+ story.id + '/edit'} }]"
-                replaceUrl="true"
-                queryParamsHandling="merge"
-                class="btn btn-primary">
-            <span class="fa fa-pencil"></span>&nbsp;<span> Edit</span>
-        </button>
+            <button type="button"
+                    [routerLink]="['../../story/'+ story.id + '/edit']"
+                    queryParamsHandling="merge"
+                    class="btn btn-primary">
+                <span class="fa fa-pencil"></span>&nbsp;<span> Edit</span>
+            </button>
+        </div>
+        <dl class="row-md jh-entity-details">
+            <dt><span>Content</span></dt>
+            <dd>
+                <span>{{story.content}}</span>
+            </dd>
+        </dl>
+        <hr>
+        <h4>Comments</h4>
+        <div *jhiHasAnyAuthority="'ROLE_USER'">
+            <span>Add your comment</span>
+        </div>
     </div>
-    <dl class="row-md jh-entity-details">
-        <dt><span>Title</span></dt>
-        <dd>
-            <span>{{story.title}}</span>
-        </dd>
-        <dt><span>Content</span></dt>
-        <dd>
-            <span>{{story.content}}</span>
-        </dd>
-        <dt><span>Date</span></dt>
-        <dd>
-            <span>{{story.date | date:'medium'}}</span>
-        </dd>
-        <dt><span>Image Url</span></dt>
-        <dd>
-            <span>{{story.imageUrl}}</span>
-        </dd>
-        <dt><span>User</span></dt>
-        <dd>
-            {{story.user?.login}}
-        </dd>
-    </dl>
 </div>
