--- a/src/main/webapp/app/entities/comment/comment-dialog.component.html
+++ b/src/main/webapp/app/entities/comment/comment-dialog.component.html
@@ -23,12 +23,36 @@
                 </small>
             </div>
         </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_date">Date</label>
+            <div class="d-flex">
+                <input id="field_date" type="datetime-local" class="form-control" name="date" [(ngModel)]="comment.date"
+                required/>
+            </div>
+            <div [hidden]="!(editForm.controls.date?.dirty && editForm.controls.date?.invalid)">
+                <small class="form-text text-danger"
+                   [hidden]="!editForm.controls.date?.errors?.required">
+                   This field is required.
+                </small>
+                <small class="form-text text-danger"
+                    [hidden]="!editForm.controls.date?.errors?.ZonedDateTimelocal">
+                    This field should be a date and time.
+                </small>
+            </div>
+        </div>
 
         <div class="form-group">
             <label class="form-control-label" for="field_story">Story</label>
             <select class="form-control" id="field_story" name="story" [(ngModel)]="comment.story" >
                 <option [ngValue]="null"></option>
                 <option [ngValue]="storyOption.id === comment.story?.id ? comment.story : storyOption" *ngFor="let storyOption of stories; trackBy: trackStoryById">{{storyOption.id}}</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_user">User</label>
+            <select class="form-control" id="field_user" name="user" [(ngModel)]="comment.user" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="userOption.id === comment.user?.id ? comment.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
         </div>
     </div>
