--- a/src/main/webapp/app/entities/comment/comment.component.html
+++ b/src/main/webapp/app/entities/comment/comment.component.html
@@ -1,16 +1,4 @@
 <div>
-    <header class="intro-header" style="background-image: url('http://clean-blog-angular.hunor.me/img/home-bg.jpg')">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class = "post-heading">
-                        <h1>Comments</h1>
-                        <span class="meta">Posted on</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
     <h2>
         <span>Comments</span>
         <button class="btn btn-primary float-right jh-create-entity create-comment" [routerLink]="['/', { outlets: { popup: ['comment-new'] } }]">
@@ -30,6 +18,7 @@
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
             <th jhiSortBy="id"><span>ID</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="content"><span>Content</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="date"><span>Date</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="story.id"><span>Story</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="user.login"><span>User</span> <span class="fa fa-sort"></span></th>
             <th></th>
@@ -39,6 +28,7 @@
             <tr *ngFor="let comment of comments ;trackBy: trackId">
                 <td><a [routerLink]="['../comment', comment.id ]">{{comment.id}}</a></td>
                 <td>{{comment.content}}</td>
+                <td>{{comment.date | date:'medium'}}</td>
                 <td>
                     <div *ngIf="comment.story">
                         <a [routerLink]="['../story', comment.story?.id ]" >{{comment.story?.id}}</a>
